--- a/public/products.html
+++ b/public/products.html
@@ -87,13 +87,13 @@
                     </div>
                     <img class="img-fluid" src="" alt="">
                   </div>
-                  <div>
-                    <button class="btn btn-outline-primary btn-sm d-block w-100" v-if="new_image">
+                  <div v-if="new_image">
+                    <button class="btn btn-outline-primary btn-sm d-block w-100">
                       新增圖片
                     </button>
                   </div>
-                  <div>
-                    <button class="btn btn-outline-danger btn-sm d-block w-100" v-else>
+                  <div v-else="new_image">
+                    <button class="btn btn-outline-danger btn-sm d-block w-100">
                       刪除圖片
                     </button>
                   </div>
