--- a/public/products.html
+++ b/public/products.html
@@ -16,7 +16,7 @@
     <div id="app">
       <div class="container">
         <div class="text-end mt-4">
-          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#productModal" @click="show_Model('new')">
+          <button class="btn btn-primary" @click="show_Model('new')">
             建立新的產品
           </button>
         </div>
@@ -81,19 +81,22 @@
                 <div class="col-sm-4">
                   <div class="mb-2">
                     <div class="mb-3">
-                      <label for="imageUrl" class="form-label">輸入圖片網址</label>
+                      <label for="imageUrl" class="form-label text-success h5 font-weight-bold ">主圖</label>
                       <input type="text" class="form-control"
-                             placeholder="請輸入圖片連結">
+                             placeholder="請輸入圖片連結" v-model="temp.imageUrl">
                     </div>
-                    <img class="img-fluid" src="" alt="">
+                    <div class="mb-3" v-for="(image, key) in temp.imagesUrl" :key="key">
+                      <label for="imageUrl" class="form-label">附圖{{ key+1 }}</label>
+                      <input type="text" class="form-control"
+                             placeholder="請輸入圖片連結" v-model="temp.imagesUrl[key]">
+                    </div>
+                    <img class="img-fluid" :src="temp.imageUrl" alt="">
                   </div>
-                  <div v-if="new_image">
-                    <button class="btn btn-outline-primary btn-sm d-block w-100">
+                  <div v-if="ShowImagebtn(temp)">
+                    <button v-if="temp.imagesUrl.length < 5" class="btn btn-outline-primary btn-sm d-block w-100" @click="this.temp.imagesUrl.push('');">
                       新增圖片
                     </button>
-                  </div>
-                  <div v-else="new_image">
-                    <button class="btn btn-outline-danger btn-sm d-block w-100">
+                    <button v-if="temp.imagesUrl.length > 0" class="btn btn-outline-danger btn-sm d-block w-100" @click="this.temp.imagesUrl.splice(-1, 1);">
                       刪除圖片
                     </button>
                   </div>
@@ -144,7 +147,7 @@
                   <div class="mb-3">
                     <div class="form-check">
                       <input id="is_enabled" class="form-check-input" type="checkbox"
-                             :true-value="1" :false-value="0" :value="temp.is_enabled">
+                             :true-value="1" :false-value="0" v-model="temp.is_enabled">
                       <label class="form-check-label" for="is_enabled">是否啟用</label>
                     </div>
                   </div>
@@ -155,7 +158,7 @@
               <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                 取消
               </button>
-              <button type="button" class="btn btn-primary" @click="Update_product()">
+              <button type="button" class="btn btn-primary" @click="Update_product(temp.id)">
                 確認
               </button>
             </div>
@@ -180,7 +183,7 @@
               <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                 取消
               </button>
-              <button type="button" class="btn btn-danger">
+              <button type="button" class="btn btn-danger" @click="Delete_product(temp.id)">
                 確認刪除
               </button>
             </div>
